remove excalidraw from subtitles on page

--- a/index.html
+++ b/index.html
@@ -297,10 +297,10 @@
             <div class="logo"><img src="Logo-square-1000px-transparent-background.png" alt="Athena Board Logo"
                     style="width: 100%; height: 100%; object-fit: contain;"></div>
             <h1>Athena Board</h1>
-            <p class="subtitle">14 ready-to-use design components for Excalidraw</p>
+            <p class="subtitle">Prefab library of 16 ready-to-use design components for authentication and user flow.</p>
             <div class="cta-buttons">
                 <a href="https://excalidraw.com/?addLibrary=https%3A%2F%2Fraw.githubusercontent.com%2Fexcalidraw%2Fexcalidraw-libraries%2Fheyyykk3-home-screens-1762438890626%2Flibraries%2Fheyyykk3%2Fhome-screens.excalidrawlib%3Fraw%3Dtrue"
-                    class="btn btn-primary">Add to Excalidraw</a>
+                    class="btn btn-primary">Add to Whiteboard</a>
                 <a href="https://github.com/heyyykk3/excalidraw-prefab-library" class="btn btn-secondary"
                     target="_blank" rel="noopener noreferrer">View on GitHub</a>
             </div>
